integrated with kafka
